add：215. 数组中的第K个最大元素 - 方法四/五：插入排序及其优化
add：215. 数组中的第K个最大元素 - 方法四/五：插入排序及其优化

--- a/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序.md
+++ b/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序.md
@@ -1,5 +1,5 @@
 ---
-layout:     post
+、layout:     post
 title:      数组、两种冒泡排序、插入排序
 subtitle:  
 date:       2019-06-17
@@ -93,20 +93,48 @@ bubbleSort(arr);
 
 
 
-### 插入排序  是冒泡排序的优化。
+### 插入排序  是冒泡排序的优化
 
-**实现原理**：通过构建有序数组对元素进行存储。
-对于未排序的数组，在已排序的数组中从最后一个元素向第一个元素遍历，找到相应位置并插入。
+**实现原理**：将一个数插入一个已经排好序的数据中。
+
+1. 第一次循环时，**从第2个数开始处理**。我们将第1个数作为已经排好序的数据：当第2个数 > 第1个数时，将第2个数放在第1个数后面一个位置；否则，将第2个数放在第1个数前面。此时，前两个数形成了一个有序的数据。
+2. 第二次循环时，我们处理第3个数。此时，**前两个数形成了一个有序的数据**：首先比较第3个数和第2个数，当第3个数 > 第2个数时，将第3个数放在第2个数后面一个位置**并结束此次循环**【优化点】；否则，再和第1个数比较。如果第3个数 > 第1个数，则将第3个数插入第1个数和第2个数中间；否则，第3个数 < 第1个数，则将第3个数放在第1个数前面。此时，前三个数形成了一个有序的数据。
+3. 后续的数据同理处理，直至结束。
+
+<img src="https://pic3.zhimg.com/v2-91b76e8e4dab9b0cad9a017d7dd431e2_b.webp" style="zoom:50%"  />
 
 ```javascript
+// 实现一：两层循环，当前i与每个值都比较
 var arr = [89, 56, 100, 21, 87, 45, 1, 88]; // 待排序数组
-        // 按照从小到大的顺序排列
-        for(var i= 1;i<arr.length;i++){
-            for(var j=i;j>0;--j){
-                if(arr[j-1]>arr[j]){
-                    [[arr[j-1]],arr[j]]=[[arr[j]],arr[j-1]];
-                }
-            }
+// 按照从小到大的顺序排列
+// 外面这层循环是里层循环的次数
+for(var i= 1;i<arr.length;i++){
+  	// --j 表示从数组第i位逐个向前遍历比大小
+    for(var j=i;j>0;--j){
+      	// 如果当前位小于前一位，则交换 --> 小的在前 --> 排序方式位：小->大
+        if(arr[j-1]>arr[j]){
+          	// 利用es6的变量交换：[a,b]=[b,a]
+          	[arr[j-1],arr[j]]=[arr[j],arr[j-1]];
+        }
+    }
+}
+```
+
+优化：**在 i 第一次比较不需要交换时，不需要再执行当前内层循环** -> 数组小于 i 的部分已经是有序数组了
+
+```javascript
+// 实现
+var arr = [89, 56, 100, 21, 87, 45, 1, 88];
+for(var i= 1;i<arr.length;i++){
+  	// 优化：小于i的位置都已经排好序了，跳过当前 i 的循环
+  	if(arr[i-1] < arr[i]) {
+      	continue;
+    }
+    for(var j=i;j>0;--j){
+        if(arr[j-1]>arr[j]){
+          	[arr[j-1],arr[j]]=[arr[j],arr[j-1]];
+        }
+    }
 }
 ```
 
