--- a/_posts/算法、刷题/2021-06-10-215.数组中的第K个最大元素.md
+++ b/_posts/算法、刷题/2021-06-10-215.数组中的第K个最大元素.md
@@ -99,5 +99,52 @@ var findKthLargest = (nums, k) => {
 }
 ```
 
+- 4、插入排序
 
+
+
+<img src="/../img/assets_2019/image-20210619124211768.png" alt="image-20210619124211768" style="zoom:35%;" />
+
+时间复杂度：O(n^2)，空间复杂度：xx
+
+```javascript
+var findKthLargest = (nums, k) => {
+  // 外层循环的是循环次数
+  for (var i = 1; i < nums.length; i++) {
+    // 里层循环的是 大 -> 小
+    for (var j = i; j > 0; --j) {
+      if (nums[j - 1] < nums[j]) {
+        //  前一项小于后一项，则交换
+        [nums[j - 1], nums[j]] = [nums[j], nums[j - 1]];
+      }
+    }
+  }
+  return nums[k - 1];
+}
+```
+
+- 5、插入排序 - 优化
+
+在 i 第一次比较不需要交换时，不需要再执行当前内层循环 -> 数组小于 i 的部分已经是有序数组了
+
+<img src="/../img/assets_2019/image-20210619132230499.png" alt="image-20210619132230499" style="zoom:35%;" />
+
+时间复杂度：O(n^2)，空间复杂度：xx
+
+```javascript
+var findKthLargest = (nums, k) => {
+    for (var i = 1; i < nums.length; i++) {
+        // 优化
+        if (nums[i-1] > nums[i]) {
+          	continue;
+        }
+        for (var j = i; j > 0; --j) {
+            if (nums[j - 1] < nums[j]) {
+              	[nums[j - 1], nums[j]] = [nums[j], nums[j - 1]];
+            }
+        }
+    }
+    return nums[k - 1];
+}
+```
 
