add：215. 数组中的第K个最大元素 - 方法六：快排
add：215. 数组中的第K个最大元素 - 方法六：快排

--- a/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序.md
+++ b/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序.md
@@ -138,25 +138,35 @@ for(var i= 1;i<arr.length;i++){
 }
 ```
 
-#### 快速排序
+#### 快速排序 对冒泡排序的一种改进
+
+又称：划分交换排序
+
+**基本思想**：通过一趟排序将要排序的数据**分割成独立的两部分**，其中一部分的所有数据比另一部分的所有数据要小，再按这种方法对这两部分数据分别进行快速排序，整个排序过程可以递归进行，使整个数据变成有序序列。
+
+<img src="http://pic2.zhimg.com/v2-d4e5d0a778dba725091d8317e6bac939_b.webp"/>
 
 ```javascript
-var quickSort = function(arr) {
-　　if (arr.length <= 1) { return arr; }
-　　var pivotIndex = Math.floor(arr.length / 2);
-　　var pivot = arr.splice(pivotIndex, 1)[0];
-　　var left = [];
-　　var right = [];
-　　for (var i = 0; i < arr.length; i++){
-　　　　if (arr[i] < pivot) {
-　　　　　　left.push(arr[i]);
-　　　　} else {
-　　　　　　right.push(arr[i]);
-　　　　}
-　　}
-　　return quickSort(left).concat([pivot], quickSort(right));
-    //或者可以写成
-   return [...qSort(left), ...[base], ...qSort(right)]
+var quickSort = function (arr) {
+  	// 退出递归的条件
+    if (arr.length <= 1) { 
+      	return arr; 
+    }
+    var midIndex = Math.floor(arr.length / 2);
+    // 从原数组中拿出 mid 值
+    var mid = arr.splice(midIndex, 1)[0];
+    var left = [];
+    var right = [];
+  	// 以 mid 为基准，循环将原数组拆分成两个数组
+    for (var i = 0; i < arr.length; i++) {
+        if (arr[i] > mid) {
+          	left.push(arr[i]);
+        } else {
+          	right.push(arr[i]);
+        }
+    }
+  	// 递归 - 左半部分 + mid + 右半部分
+   	return quickSort(left).concat([mid], quickSort(right));
 };
 ```
 
