--- a/_posts/算法、刷题/2021-06-10-215.数组中的第K个最大元素.md
+++ b/_posts/算法、刷题/2021-06-10-215.数组中的第K个最大元素.md
@@ -148,3 +148,37 @@ var findKthLargest = (nums, k) => {
 }
 ```
 
+- 6、快速排序
+
+<img src="/../img/assets_2019/image-20210619144139782.png" alt="image-20210619144139782" style="zoom:35%;" />
+
+时间复杂度：O(n^2)，空间复杂度：xx
+
+```js
+var findKthLargest = (nums, k) => {
+    var quickSort = function (arr) {
+      	// 退出递归的条件
+        if (arr.length <= 1) { 
+          	return arr; 
+        }
+        var midIndex = Math.floor(arr.length / 2);
+        // 从原数组中拿出 mid 值
+        var mid = arr.splice(midIndex, 1)[0];
+        var left = [];
+        var right = [];
+        for (var i = 0; i < arr.length; i++) {
+          	// 根据 mid 值，将原数组划分成两半
+            if (arr[i] > mid) {
+              	left.push(arr[i]);
+            } else {
+              	right.push(arr[i]);
+            }
+        }
+      	// 递归 - 左半部分 + mid + 右半部分
+        return quickSort(left).concat([mid], quickSort(right));
+    };
+    let res = quickSort(nums);
+    return res[k - 1];
+}
+```
+
