modify：盒模型及外边距合并
modify：盒模型及外边距合并

--- a/_posts/2019-07-10-html相关 面试问题.md
+++ b/_posts/2019-07-10-html相关 面试问题.md
@@ -184,7 +184,7 @@ DOM ready：（也叫DOMContentLoaded ），在第4步完成后触发；
 　　5）有async标签的js，js的加载执行和html的解析和渲染并行
 　　6）有defer标签的js，js的加载和html的解析和渲染并行，但会在html解析完成后执行,在触
 发DOMContentLoaded事件前执行
-　　7）DOMContentLoaded和onload的区别：DOMContentLoaded在html解析完毕后执行，loload在页面完全加载完成后执行（包括样式和图片）
+　　7）DOMContentLoaded和onload的区别：DOMContentLoaded在html解析完毕后执行，onload在页面完全加载完成后执行（包括样式和图片）
 2.解析css，生成CSSOM，css对象模型
 3.dom和css合并，构建渲染树（Render Tree）
 4.布局（Layout）和绘制（Paint），重绘（repaint）和重排（reflow/回流）
