--- a/_posts/css相关内容/2019-07-09-盒模型有哪些？有什么区别？.md
+++ b/_posts/css相关内容/2019-07-09-盒模型有哪些？有什么区别？.md
@@ -17,12 +17,15 @@ typora-root-url: ..
 
 
 
-盒模型分为IE盒模型和W3C标准盒模型。
+盒模型分为**IE盒模型**和**W3C标准盒模型**。
 
-1. **W3C 标准盒模型content-box**：属性width,height只包含内容content，不包含border和padding。
+- **W3C 标准盒模型content-box**：设置属性width/height只包含内容content，不包含border和padding。
 
-2. **IE 盒模型border-box**：属性width,height包含border和padding，指的是content+padding+border。
+<img src="/../img/assets_2019/image-20210619145623877.png" alt="image-20210619145623877" style="zoom:35%;" />
 
-**box-sizing**控制，默认值为**content-box，即标准盒模型**；**border-box则用的是IE盒模型**。
+- **IE 盒模型border-box**：属性width/height = content + padding + border。
 
+<img src="/../img/assets_2019/image-20210619145708455.png" alt="image-20210619145708455" style="zoom:33%;" />
+
+CSS 控制 ：**box-sizing**，默认值为**content-box，即标准盒模型**；**border-box则用的是IE盒模型**。
 
