--- a/_posts/css相关内容/2019-07-07-css中的动画特性可以用js实现，那为什么还要用css来实现？.md
+++ b/_posts/css相关内容/2019-07-07-css中的动画特性可以用js实现，那为什么还要用css来实现？.md
@@ -7,7 +7,7 @@ author:
 header-img: 
 catalog: true
 tags:
-    - < 面试题整理 >
+    - < CSS相关内容 >
 typora-root-url: ..
 ---
 
@@ -34,5 +34,4 @@ typora-root-url: ..
 ​	如果有任何**动画触发绘画，布局或两者，则需要 “主线程” 才能完成工作。** 这对于基于 CSS 和 JavaScript 的动画都是如此，布局或绘制的开销可能会使与 CSS 或 JavaScript 执行相关的任何工作相形见绌，这使得问题没有实际意义。
 
 ​	**CSS3有兼容性问题，而JS大多时候没有兼容性问题。**
-
 
