--- a/_posts/css相关内容/2019-07-14-文本不换行+显示省略号.md
+++ b/_posts/css相关内容/2019-07-14-文本不换行+显示省略号.md
@@ -7,16 +7,32 @@ author:
 header-img: 
 catalog: true
 tags:
-    - < 面试题整理 >
+    - < CSS相关内容 >
 typora-root-url: ..
 ---
 
 
 
-# 文本不换行+显示省略号
+# 显示省略号
 
 ```css
-white-space:nowrap;
-overflow:hidden;
-text-overflow:ellipsis;
+/* 一行文本省略 */
+white-space: nowrap;
+text-overflow: ellipsis;
+overflow: hidden;
 ```
+
+```css
+/* 多行文本省略(ps：此处是两行) */
+text-overflow: -o-ellipsis-lastline;
+overflow: hidden;
+text-overflow: ellipsis;
+/* display: -webkit-box 必须结合的属性 ，将对象作为弹性伸缩盒子模型显示 */
+display: -webkit-box;
+/* line-clamp 用来限制在一个块元素显示的文本的行数 */
+-webkit-line-clamp: 2;
+line-clamp: 2;
+/* box-orient 必须结合的属性 ，设置或检索伸缩盒对象的子元素的排列方式 */
+-webkit-box-orient: vertical;
+```
+
