--- a/_posts/css相关内容/2019-07-17-css中怎么使盒子上下居中.md
+++ b/_posts/css相关内容/2019-07-17-css中怎么使盒子上下居中.md
@@ -7,7 +7,7 @@ author:
 header-img: 
 catalog: true
 tags:
-    - < 面试题整理 >
+    - < CSS相关内容 >
 typora-root-url: ..
 ---
 
@@ -50,5 +50,4 @@ html,body{
     justify-content:center;/*水平居中*/
 }
 ```
-
 
