--- a/_posts/css相关内容/2020-03-18-安卓字体上浮.md
+++ b/_posts/css相关内容/2020-03-18-安卓字体上浮.md
@@ -1,18 +1,18 @@
 ---
 layout:     post
-title:     工作 安卓字体上浮
+title:     安卓字体上浮
 subtitle:  
 date:       2020-03-18
 author:     
 header-img: 
 catalog: true
 tags:
-    - < 工作遇到的问题记录 >
+    - < CSS相关内容 >
 typora-root-url: ..
 ---
 
 
-# 工作 安卓字体上浮
+# 安卓字体上浮
 
 场景：UI走查的时候，安卓字体上浮2px左右，导致上下居中效果不能实现
 
