--- a/_posts/css相关内容/2020-10-27-工作 层叠上下文.md
+++ b/_posts/css相关内容/2020-10-27-工作 层叠上下文.md
@@ -1,18 +1,18 @@
 ---
 layout:     post
-title:     工作 层叠上下文
+title:     层叠上下文
 subtitle:  
 date:       2020-10-27
 author:     
 header-img: 
 catalog: true
 tags:
-    - < 工作遇到的问题记录 >
+    - < CSS相关内容 >
 typora-root-url: ..
 ---
 
 
-# 工作 层叠上下文
+# 层叠上下文
 
 场景：运营自主设置热区的时候，不管热区设置多大，都不会影响下方商品的跳转链接；研究发现是热区的区块，显示在商品下方
 
