--- a/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序、快排.md
+++ b/_posts/算法、刷题/2019-06-17-冒泡排序、插入排序、快排.md
@@ -1,6 +1,6 @@
 ---
 、layout:     post
-title:      数组、两种冒泡排序、插入排序
+title:      冒泡排序、插入排序、快排
 subtitle:  
 date:       2019-06-17
 author:     
@@ -13,7 +13,7 @@ typora-root-url: ..
 
 
 
-# 数组、两种冒泡排序、插入排序
+# 冒泡排序、插入排序、快排
 数组:一组有序的数据,数据类型可以不一样。
 
 数组的定义:2种方式
