--- a/_posts/算法、刷题/2021-06-22-1663. 具有给定数值的最小字符串【贪心算法】.md
+++ b/_posts/算法、刷题/2021-06-22-1663. 具有给定数值的最小字符串【贪心算法】.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      1663. 具有给定数值的最小字符串
+title:      1663. 具有给定数值的最小字符串【贪心算法】
 subtitle:  
 date:       2021-06-22
 author:     
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-## 1663. 具有给定数值的最小字符串
+## 1663. 具有给定数值的最小字符串【贪心算法】
 
 小写字符的【数值】是它在字母表中的位置（从 1 开始），因此 a 的数值为 1 ，b 的数值为 2 ，c 的数值为 3 ，以此类推。
 
@@ -27,7 +27,7 @@ typora-root-url: ..
 
 
 
-- 方法一：自己写的算法，待优化
+- 方法一：自己写的算法
 
 <img src="/../img/assets_2019/image-20210623000016342.png" alt="image-20210623000016342" style="zoom:35%;" />
 
@@ -103,3 +103,6 @@ var getSmallestString = function (n, k) {
     };
 ```
 
+- 方法二：贪心算法
+
+先简单记录下贪心算法
