add：1663. 具有给定数值的最小字符串 - 方法二：贪心算法
add：1663. 具有给定数值的最小字符串 - 方法二：贪心算法

--- a/_posts/算法、刷题/2021-06-22-1663. 具有给定数值的最小字符串【贪心算法】.md
+++ b/_posts/算法、刷题/2021-06-22-1663. 具有给定数值的最小字符串【贪心算法】.md
@@ -105,4 +105,35 @@ var getSmallestString = function (n, k) {
 
 - 方法二：贪心算法
 
-先简单记录下贪心算法
+<img src="/../img/assets_2019/image-20210624083525936.png" alt="image-20210624083525936" style="zoom:33%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
+
+```js
+// 策略：先全部都填充为 a，再从后往前填充z
+var getSmallestString = (n, k) => {
+  	// 全部填充为a --> 初始解
+  	let arr = [];
+  	for (let i = 0; i < n; i++) {
+    		arr.push('a');
+  	}
+  
+  	// n-- 相当于结果数组从后往前
+  	while (n > 0) {
+    		// n - 1 是 a 的个数 (n-1)个a
+    		if (k - 26 >= n - 1) {
+      			// k-26 的结果是否大于所需要的 a 的个数 -> 大于就赋值 26
+      			arr[n - 1] = 'z';
+      			k -= 26;
+    		} else {
+      			// 相当于k的值已经不能再减26了，否则n数量就不够了
+      			// n - 1 是 a 的数量；由于ASC码从 a-97 算起，k 是 数量，从1算起，所以 97 - 1 
+      			arr[n - 1] = String.fromCharCode((97 - 1) + k - (n - 1));
+      			break
+    		}
+    		n--;
+  	}
+ 		return arr.join('');
+}
+```
+
