--- a/_posts/项目问题/2019-07-31-微信小程序的学习.md
+++ b/_posts/项目问题/2019-07-31-微信小程序的学习.md
@@ -18,7 +18,7 @@ typora-root-url: ..
 
 特征：
 
-1. 给父级元素添加，`display:block`；子盒子默认水平排列
+1. 给父级元素添加，`display:flex`；子盒子默认水平排列
 
 2. flex方向（默认row，水平） `flex-direction:column;`竖直方向排列
 3. 子盒子在父盒子中水平居中（三行固定写法）
