add：几种常见布局格式
add：几种常见布局格式

--- a/_posts/css相关内容/2019-07-07-app适配怎么写？使用的单位是什么？（rem）.md
+++ b/_posts/css相关内容/2019-07-07-app适配怎么写？使用的单位是什么？（rem）.md
@@ -19,7 +19,7 @@ typora-root-url: ..
 
 常见单位：vh
 
-![image-20200508085234789](/../img/assets_2019/image-20200508085234789.png)
+<img src="/../img/assets_2019/image-20200508085234789.png" alt="image-20200508085234789" style="zoom:35%;" />
 
 解答：①**视口`viewPort`适配**，PC和手机屏幕不匹配的问题。
 
