--- a/_posts/css相关内容/2019-10-26-左边固定，右边自适应.md
+++ b/_posts/css相关内容/2019-10-26-左边固定，右边自适应.md
@@ -192,13 +192,9 @@ flex.outer{
 }
 ```
 
-**flex**属性是【flex-grow，**flex-shrink** **和** **flex-basis**】的简写，默认值为0 1 auto。后两个属性可选。
+**flex**属性是【flex-grow，**flex-shrink** **和** **flex-basis**】的简写。
 
-flex-grow属性定义项目的放大比例，默认为0，即如果存在剩余空间，也不放大。
-
-flex-shrink属性定义了项目的缩小比例，默认为1，即如果空间不足，该项目将缩小。
-
-flex-basis属性定义了在分配多余空间之前，项目占据的主轴空间（main size）。浏览器根据这个属性，计算主轴是否有多余空间。它的默认值为auto，即项目的本来大小。它可以设为跟width或height属性一样的值（比如350px），则项目将占据固定空间。
+其中 `flex-basis` 这个属性定义了项目将占据固定空间。
 
 
 
