--- a/_posts/css相关内容/2021-06-26-flex布局.md
+++ b/_posts/css相关内容/2021-06-26-flex布局.md
@@ -35,13 +35,13 @@ flexbox 的特性是沿着**主轴或者交叉轴**对齐之中的元素
 
 【容易被遗忘的几个点】
 
-1⃣️元素**默认不会在主维度方向拉伸**，但是**可以缩小**
+1⃣️元素 **默认不会在主维度方向拉伸** ，但是**可以缩小**
 
-2⃣️如果有一个元素比其他元素都高，其他元素会被拉伸来填充**交叉轴**大小 -- 前提是其他元素不设置固定高度 --> 最高的元素定义了容器的高度，而属性 `align-items` 默认为 `stretch`，在交叉轴默认拉伸
+2⃣️如果有一个元素比其他元素都高，其他元素会被 **拉伸来填充交叉轴** 大小 -- 前提是其他元素不设置固定高度 --> 最高的元素定义了容器的高度，而属性 `align-items` 默认为 `stretch`，在交叉轴默认拉伸
 
 <img src="/../img/assets_2019/image-20210626174524473.png" alt="image-20210626174524473" style="zoom:33%;float:left;" />
 
-3⃣️元素的`flex-wrap`属性默认为 `nowrap` -- 所以当一排元素过多超过容器大小，元素**会溢出而不会换行**
+3⃣️元素的`flex-wrap`属性默认为 `nowrap` -- 所以当一排元素过多超过容器大小，元素会 **默认溢出而不会换行**
 
 ------
 
@@ -53,7 +53,7 @@ flexbox 的特性是沿着**主轴或者交叉轴**对齐之中的元素
 
 `flex: <flex-grow> <flex-shrink> <flex-basis>` 这三个属性的简写
 
-【补充一下】
+【每个属性补充】：
 
 ​	 `flex-basis` --> 定义了元素的 **空间大小**，即**项目将占据固定空间** --> 如果没有设置固定宽度，而是取默认设置 `auto` ，则默认**取元素内容的尺寸** --> flex容器里除了元素所占的空间以外的富余空间就是**可用空间**
 
@@ -61,18 +61,18 @@ flexbox 的特性是沿着**主轴或者交叉轴**对齐之中的元素
 
 ​	`flex-shrink` --> 属性值为正整数时，在超出主轴长度时，可以缩小元素所占空间到 `flex-basis` 以下，更大的数值，收缩程度更大
 
-| 常见简写              | 正常写法       | 含义                                                         |
-| --------------------- | -------------- | ------------------------------------------------------------ |
-| flex: initial【默认】 | flex: 0 1 auto | 不可放大，但可缩小                                           |
-| flex: auto            | flex: 1 1 auto | 既可以放大，也可以缩小                                       |
-| flex: none            | flex: 0 0 auto | 既不能放大，也不能缩小                                       |
-| flex: 1【最常见】     | flex: 1 1 0    | 可以在f lex-basis的基础上放大缩小<br>`flex-basis: 0` 相当于指定了宽度为 0 |
+| 常见简写                 | 正常写法       | 含义                                                         |
+| ------------------------ | -------------- | ------------------------------------------------------------ |
+| flex: initial【默认】    | flex: 0 1 auto | 不可放大，但可缩小                                           |
+| flex: auto               | flex: 1 1 auto | 既可以放大，也可以缩小                                       |
+| flex: none               | flex: 0 0 auto | 既不能放大，也不能缩小                                       |
+| flex: 1【最常见-自适应】 | flex: 1 1 0    | 可以在f lex-basis的基础上放大缩小<br>`flex-basis: 0` 相当于指定了宽度为 0 |
 
 ------
 
 ### 4、`space-between` 和 `space-around`
 
-`justify-content` 定义了元素在主轴上的对齐方式。
+`justify-content` 定义了元素在 **主轴** 上的对齐方式。
 
 `space-between` ：把元素排列好之后的剩余空间拿出来，平均分配到元素之间，所以元素之间间隔相等
 
@@ -95,4 +95,12 @@ flexbox 的特性是沿着**主轴或者交叉轴**对齐之中的元素
 1⃣️ `order: <integer>`：定义项目的排列顺序。数值越小，排列越靠前，默认为0。
 
 2⃣️ ` align-self: auto | flex-start | flex-end | center | baseline | stretch;` ：允许单个项目有与其他项目不一样的对齐方式，可覆盖`align-items`属性
+
+------
+
+### 7、容器易遗忘属性【少用，易遗漏】
+
+ `align-content: flex-start | flex-end | center | space-between | space-around | stretch;`
+
+定义了多根轴线的对齐方式。如果项目只有一根轴线，该属性不起作用。
 
