add：关于圣杯和双飞翼布局
add：关于圣杯和双飞翼布局

--- a/_posts/css相关内容/2021-06-27-flex布局 - 常见布局.md
+++ b/_posts/css相关内容/2021-06-27-flex布局 - 常见布局.md
@@ -51,6 +51,12 @@ typora-root-url: ..
 }
 ```
 
+添加一种和圣杯布局区分开来的布局：双飞翼布局
+
+网上几篇文章都是利用 `margin-left: -100%` 实现的，详细可以参考：https://www.jianshu.com/p/81ef7e7094e8
+
+<img src="/../img/assets_2019/image-20210627130608191.png" alt="image-20210627130608191" style="zoom:20%;" />
+
 ### 4/6、悬挂式布局
 
 在主栏的左右侧添加图片栏
