add：css3有哪些新特性
add：css3有哪些新特性

--- a/_posts/css相关内容/2019-07-14-文本不换行+显示省略号.md
+++ b/_posts/css相关内容/2019-07-14-文本不换行+显示省略号.md
@@ -22,6 +22,8 @@ text-overflow: ellipsis;
 overflow: hidden;
 ```
 
+多行文本出现显示省略号后下面还有内容展示（给个 padding 值撑开盒子就会出现）：
+
 ```css
 /* 多行文本省略(ps：此处是两行) */
 text-overflow: -o-ellipsis-lastline;
@@ -36,3 +38,20 @@ line-clamp: 2;
 -webkit-box-orient: vertical;
 ```
 
+<img src="/../img/assets_2019/image-20210628084145480.png" alt="image-20210628084145480" style="zoom:40%;" />
+
+更有甚优的解决方案： 利用高度和行高解决
+
+```css
+width:400px;
+overflow : hidden;
+text-overflow: ellipsis;
+display: -webkit-box;
+-webkit-line-clamp: 2;
+-webkit-box-orient: vertical;
+line-height:30px;
+/* 高度=行高*行数（webkit-line-clamp） */
+height:60px;
+```
+
+<img src="/../img/assets_2019/image-20210628084414669.png" alt="image-20210628084414669" style="zoom:40%;" />
