--- a/_posts/css相关内容/2021-06-19-CSS选择器.md
+++ b/_posts/css相关内容/2021-06-19-CSS选择器.md
@@ -19,6 +19,15 @@ typora-root-url: ..
 
 要点/重点记录：
 
+- CSS 选择器是从右向左进行匹配的
+
+```css
+/* 先找到所有 h3 元素，再过滤父元素不是 .content 的，最后过滤掉 .content 不是 div 标签的 */
+div.content h3 {}
+```
+
+------
+
 - 组合器：四种可用的类型
 
 |                    | Combinators | Select                                                       |
