modify：层叠上下文+层叠等级
modify：层叠上下文+层叠等级

--- a/_posts/css相关内容/2020-10-27-工作 层叠上下文.md
+++ b/_posts/css相关内容/2020-10-27-工作 层叠上下文.md
@@ -32,6 +32,8 @@ typora-root-url: ..
 
 
 
+以下为记录的核心要点梳理：
+
 #### 层叠上下文 + 层叠等级
 
 ​	先理解 `<html></html>` 中有默认的【**层叠上下文**】概念，也可以触发单独的【层叠上下文】，每个【层叠上下文】中【**层叠等级**】控制哪个元素离用户更近；
@@ -47,9 +49,9 @@ typora-root-url: ..
 - 父元素的【**display属性值**】为`flex|inline-flex`，子元素`z-index`属性值不为`auto`的时候，子元素为层叠上下文元素；
 - 元素的【`opacity`**属性值**】不是`1`；
 - 元素的【`transform`**属性值**】不是`none`；
-- 元素`mix-blend-mode属性值不是`normal；
-- `元素的`filter`属性值不是`none；
-- `元素的`isolation`属性值是`isolate；
+- 元素`mix-blend-mode`属性值不是`normal`；
+- 元素的`filter`属性值不是`none`；
+- 元素的`isolation`属性值是`isolate`；
 - `will-change`指定的属性值为上面任意一个；
 - 元素的`-webkit-overflow-scrolling`属性值设置为`touch`。
 
@@ -59,15 +61,50 @@ typora-root-url: ..
 
 在上述基础上去理解【层叠顺序】这个规则，可以把这个规则理解成css自定义的规则；
 
-​		注意：层级上下文中，background/border的优先级低于z-index负数；
+​		特别注意：层级上下文中，`background/border`的优先级低于`z-index`负数；
 
-​					块级盒子/float盒子的优先级低于内联元素；
+​					       块级盒子`block/float`盒子的优先级低于内联元素`inline/inline-block`；
 
 ![image-20201027174811488](/../img/assets_2019/image-20201027174811488.png)
 
 
 
+### 有趣的例子
 
+【这个例子打破了我对 z-index 只跟着 position 非static 才有效的认知】
 
+父盒子给 `display:flex` ，子盒子给 `z-index` 就可以让子盒子形成层级上下文。
 
+```html
+<div class="box">
+    <div class="parent">
+        parent
+        <div class="child">child</div>
+    </div>
+</div>
+```
+
+```css
+.box {
+	display: flex;
+}
+.parent {
+	background: #168bf5;
+    /* 不配合 position 属性，也可以生效 ---- 因为形成了层叠上下文 */
+	z-index: -2;
+}
+.child {
+	background: #32d19c;
+	position: relative;
+	z-index: -1;
+}
+```
+
+![image-20210628204317197](/../img/assets_2019/image-20210628204317197.png)
+
+### 正确区分 layer 和 层级上下文
+
+详细可以参考博客（从Demo3起讲这个）：[chrome devTools](https://blog.csdn.net/qq_39446719/article/details/102980947)
+
+有自己的 layer 的元素则必定是一个层叠上下文，而是层叠上下文的元素不一定有自己的 layer
 
