modify：更好的例子说明 flex+z-index
modify：更好的例子说明 flex+z-index

--- a/_posts/css相关内容/2020-10-27-工作 层叠上下文.md
+++ b/_posts/css相关内容/2020-10-27-工作 层叠上下文.md
@@ -18,7 +18,9 @@ typora-root-url: ..
 
 ![image-20201027170519735](/../img/assets_2019/image-20201027170519735.png)
 
-参考：[长安曹公子的掘金](https://juejin.im/post/6844903667175260174#heading-8)
+参考：[长安曹公子的掘金](https://juejin.im/post/6844903667175260174#heading-8)（参考了下方作者的文章）
+
+[张鑫旭写的层叠上下文+层叠等级](https://www.zhangxinxu.com/wordpress/2016/01/understand-css-stacking-context-order-z-index/)
 
 总结：
 
@@ -29,6 +31,10 @@ typora-root-url: ..
 ​	1.2如果两个元素不在统一层叠上下文中，请先比较他们所处的层叠上下文的层叠等级。
 
 2、当两个元素层叠等级相同、层叠顺序相同时，在DOM结构中后面的元素层叠等级在前面元素之上。
+
+学习的价值
+
+<img src="/../img/assets_2019/image-20210629001326580.png" alt="image-20210629001326580" style="zoom:40%;" />
 
 
 
@@ -65,7 +71,7 @@ typora-root-url: ..
 
 ​					       块级盒子`block/float`盒子的优先级低于内联元素`inline/inline-block`；
 
-![image-20201027174811488](/../img/assets_2019/image-20201027174811488.png)
+<img src="/../img/assets_2019/2016-01-09_211116.png" alt="更完整的7阶层叠顺序图" style="zoom:90%;" />
 
 
 
@@ -73,34 +79,19 @@ typora-root-url: ..
 
 【这个例子打破了我对 z-index 只跟着 position 非static 才有效的认知】
 
-父盒子给 `display:flex` ，子盒子给 `z-index` 就可以让子盒子形成层级上下文。
+结论：父盒子给 `display:flex` ，子盒子给 `z-index` 就可以让子盒子形成层级上下文。
 
-```html
-<div class="box">
-    <div class="parent">
-        parent
-        <div class="child">child</div>
-    </div>
-</div>
-```
+- 先看下没有给父盒子 `box` 任何样式：背景色盖住了 `z-index` 为负数的图片
 
-```css
-.box {
-	display: flex;
-}
-.parent {
-	background: #168bf5;
-    /* 不配合 position 属性，也可以生效 ---- 因为形成了层叠上下文 */
-	z-index: -2;
-}
-.child {
-	background: #32d19c;
-	position: relative;
-	z-index: -1;
-}
-```
+<img src="/../img/assets_2019/image-20210628234332421.png" alt="image-20210628234332421" style="zoom:50%;" />
 
-![image-20210628204317197](/../img/assets_2019/image-20210628204317197.png)
+- 添加父flex，子z-index后，`.father` 变成层级上下文 -> 负 `z-index` 大于背景色
+
+（下面例子中，我把 `.father` 的 `z-index` 设置的比 `.img` 大，但也不影响层级比较规则）
+
+<img src="/../img/assets_2019/image-20210629000335956.png" alt="image-20210629000335956" style="zoom:35%;" />
+
+
 
 ### 正确区分 layer 和 层级上下文
 
