modify：水平垂直居中
modify：水平垂直居中

--- a/_posts/css相关内容/2021-06-29-子盒子在父盒子中水平垂直居中有几种方法？.md
+++ b/_posts/css相关内容/2021-06-29-子盒子在父盒子中水平垂直居中有几种方法？.md
@@ -2,7 +2,7 @@
 layout:     post
 title:     子盒子在父盒子中水平垂直居中有几种方法？
 subtitle:  
-date:       2019-07-07
+date:       2021-06-29
 author:     
 header-img: 
 catalog: true
@@ -15,11 +15,7 @@ typora-root-url: ..
 
 # 子盒子在父盒子中水平垂直居中有几种方法？
 
-#### （定位、弹性盒子）
-
-水平垂直居中：
-
-##### 1.定位position+margin外边距（需要知道子盒子的宽高）
+### 1.定位position+margin外边距（需要知道子盒子的宽高）
 
 ```css
 /*父盒子*/
@@ -35,7 +31,7 @@ position: relative;
  margin-left: -50px;
 ```
 
-##### 2.定位position+transform**（不需要知道宽高）**
+### 2.定位position+transform**（不需要知道宽高）**
 
 ```css
 /*父盒子*/
@@ -48,13 +44,11 @@ position: absolute;
 top: 50%;            
 left: 50%;            
 transform: translate(-50%,-50%);
+/* 在已知子盒子宽高的情况下， transform 可以改为 margin -> 性能考虑 */
+margin: -51px 0 0 -51px;
 ```
 
-**优点**：1. 内容可变高度 2. 代码量少 
-
-缺点： 1. IE8不支持 2. 属性需要写浏览器厂商前缀 3. 可能干扰其他transform效果 4. 某些情形下会出现文本或元素边界渲染模糊的现象
-
-##### 3.使用弹性盒子flex布局（不需要知道宽高）
+### 3.flex布局（不需要知道宽高）
 
 ```css
 /*父盒子*/ 
@@ -63,9 +57,9 @@ justify-content: center;
 align-items: center;
 ```
 
-##### 4.margin：auto（不需要知道宽高）
+### 4.margin:auto + position 四个值为0（不需要知道宽高）
 
-父盒子本身需要宽度；
+父盒子需要高度，子盒子本身需要宽高；
 
 设置margin自动适应，然后设置定位的上下左右都为0，就如四边均衡受力从而实现盒子的居中；
 
@@ -78,22 +72,31 @@ align-items: center;
  margin: auto;
 ```
 
-如果父子元素都有设置宽高：`margin: 150px auto;`
+### 5.table-cell 布局
 
-##### 5.table-cell
-
-将父盒子设置为table-cell(能够使元素呈单元格的样式显示)，并设置text-align: center(使内容水平居中)；vertical-align: middle(使内容垂直居中);。子盒子设置为inline-block可以使其内容变为文本格式，也可设置宽高；
+将父盒子设置为 `table-cell` (能够使元素呈单元格的样式显示)，并设置 `text-align: center` (使内容水平居中)；`vertical-align: middle` (使内容垂直居中);。子盒子设置为 `inline-block` 可以使其内容变为文本格式，也可设置宽高；
 
 ```css
 .father{    
 	display: table-cell;    
 	width: 400px;    
-	height: 400px;    
+	height: 400px;  
+    /* 垂直居中 */
 	vertical-align: middle;     
+    /* 水平居中 */
 	text-align: center;
 }
-.child{    
-	display: inline-block;    
-	vertical-align: middle;
-}
 ```
+
+### 行内元素的一些居中属性
+
+```css
+/* 行元素 - 给父级加，使文本/图片居中  */
+text-align ：center；
+/* 块元素 - 给当前元素加，当前元素必须有宽度 */
+margin ：0 auto；
+/* 行元素（单行） - 行高=盒子高度 */
+line-height: 100px;
+height: 100px;
+```
+
