modify：浮动详解+案例
modify：浮动详解+案例

--- a/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
+++ b/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
@@ -15,7 +15,15 @@ typora-root-url: ..
 
 # 为什么要清除浮动？怎么清除浮动？
 
-**产生原因**：子盒子浮动导致的父盒子内高度为 0 ，父级盒子不能被撑开，发生**高度塌陷**的情况。
+浮动详解看这篇文章：[带你彻底了解CSS浮动](https://segmentfault.com/a/1190000012739764)
+
+关键点：
+
+- 块级元素认为浮动元素不存在，但是浮动元素会影响行内元素的布局（ 环绕）-> 间接影响了块布局
+
+
+
+**问题**：子盒子浮动导致的父盒子内高度为 0 ，父级盒子不能被撑开，发生**高度塌陷**的情况。
 
 **带来的负作用**：
 
@@ -31,9 +39,27 @@ typora-root-url: ..
 
    （这个属性相当于触发BFC，让父级紧贴内容，包括使用了浮动的盒子）
 
-   （为了去除兼容性问题，会添加`zoom:1;`）
+   （为了去除兼容性问题，会添加 IE 专有属性 - 缩放`zoom:1;`）
 
-3. 在父盒子里面的子盒子后面**添加一个子盒子**，如div，**添加样式 `.clear{ clear:both; }`；**
+3. 在父盒子里面最后的子盒子后面**添加一个子盒子**
 
-4. 采用**伪元素，给父元素追加`:after`**，给父元素添加一个类`.clearfix{content:"";clear:both;}`
+    ```css
+    .clear {
+    	clear: both;
+    }
+    ```
+
+4. 采用**伪元素，给父元素追加`::after`**
+
+    ```css
+    /* 最简写法 */
+    .father::after {
+    	content:"";
+        display: block;
+        /* 表示元素的哪些边不应该挨着浮动框 - 撑开了父级 */
+        clear:both;
+    }
+    ```
+
+    
 
