modify：行内元素+块级元素复习
modify：行内元素+块级元素复习

--- a/_posts/2019-07-10-html相关 面试问题.md
+++ b/_posts/2019-07-10-html相关 面试问题.md
@@ -84,9 +84,11 @@ typora-root-url: ..
 
 #### 2.行内元素、块元素有哪些？它们有什么不同？
 
-行内元素：b、span、a、u、em、i、img、input、select、label、textarea、button
+参考博客：[行内元素+块级元素](https://www.cnblogs.com/yc8930143/p/7237456.html)
 
-块级元素：div、h、ol、ul、dl、li、table、td、th、tr、dd、dt、p、caption
+行内元素：b、span、a、u、em、i、img、input、select、label、textarea、button、strong、br
+
+块级元素：div、h1～h6、ol、ul、dl、li、table、td、th、tr、dd、dt、p、caption、address、hr
 
 空元素：area、meta、link
 
@@ -98,7 +100,7 @@ typora-root-url: ..
 
   3、和其他元素都**在一行上**。
 
-  4、高，行高及外边距和内边距**左右可改变**。
+  4、行高及 `margin`、`padding` 属性值的 **左右可改变，上下无效**。
 
 - 块级元素的特点：
 
@@ -112,21 +114,57 @@ typora-root-url: ..
 
 - 区别：
 
-  1、**行内元素**会在**一条直线上分列**，都是统一行的，程度偏向分列。
+  1、**行内元素**会在**一条直线上分列**，都是统一行的，水平方向排列。
 
-  ​	  **块级元素各盘踞一行**，垂直偏向分列；块级元素重新行开端停止接着一个断行。
+  ​	  **块级元素各盘踞一行**，垂直方向排列；块级元素重新行开端停止接着一个断行。
 
   2、**行内元素**不可以包括块级元素，只能包容文本或许其余行内元素。
 
-  ​	  **块级元素**能够包括行内元素和块级元素，还能够包容内联元素和其余元素；。
+  ​	  **块级元素**能够包括行内元素和块级元素，还能够包容内联元素和其余元素。
+
+  ​	【a链接内不能嵌套其他链接；p标签中不能嵌套div标签】
 
   3、行内元素与块级元素属性的分歧，主要在盒模子属性上。
 
-  **行内元素**设置width无效，height无效（**能够设置line-height**），margin、padding设置上下有效。
+  **行内元素**设置width无效，height无效（**能够设置line-height**），margin、padding设置左右有效。
 
 - 行内元素内嵌块级元素。高度被子元素撑大，而**宽度和父级一致**（父级是body就是body的宽度）。
 
-- **行内块元素**内嵌块级元素。宽高都会**被子元素撑大**的。
+- **行内块元素**：例如`img` 、 `input` ，和其他元素同一行（行内元素特点），可以设置元素的宽高等（块级元素特点）。
+
+```css
+/* 行内元素/内联元素 */
+display：inline;
+/* 块级元素 */
+display:block;
+/* 设置成行内块级元素 */
+display:inline-block;
+```
+
+- CSS给行内元素水平垂直居中
+
+```css
+span {
+    /* 水平 */
+    text-align: center;
+    /* 垂直 */
+    height: 30px;
+    line-height: 30px;
+}
+```
+
+- CSS给块级元素水平垂直居中
+
+```css
+div {
+    /* 水平 */
+	width: 100px;
+    margin: 0 auto;
+    /* 垂直 */
+    height: 30px;
+    line-height: 30px;
+}
+```
 
 
 
