modify：复习 父子组件通信
modify：复习 父子组件通信

--- a/_posts/2020-06-17-微信小程序 页面通信.md
+++ b/_posts/2020-06-17-微信小程序 页面通信.md
@@ -24,15 +24,7 @@ typora-root-url: ..
 
 <img src="/img/assets_2019/image-20200617102031938.png" alt="image-20200617102031938" style="zoom:33%;" />
 
-##### 2、写一个eventBus（只支持一个调用）
+##### 2、[写一个eventBus](https://blog.csdn.net/julystroy/article/details/86572342)（只支持一个调用）
 
-```js
-https://blog.csdn.net/julystroy/article/details/86572342
-```
-
-##### 3、eventBus更好的实践
-
-```js
-https://github.com/dannnney/weapp-event
-```
+##### 3、[eventBus更好的实践](https://github.com/dannnney/weapp-event)
 
