--- a/_posts/2020-10-30-工作 父子组件通信.md
+++ b/_posts/2020-10-30-工作 父子组件通信.md
@@ -18,15 +18,17 @@ typora-root-url: ..
 
 参考：
 
-
-
-![image-20201030112829140](/img/assets_2019/image-20201030112829140.png)
+<img src="/img/assets_2019/image-20201030112829140.png" alt="image-20201030112829140" style="zoom:67%;" />
 
 #### 问题出现原因：
 
-​	不够了解多种形式：如 props、`$emit`/`$on`、vuex、`$parent` / `$children`、`$attrs`/`$listeners`和 provide/inject，
+​	不够了解多种形式：如 props、`$emit`/`$on`、vuex、`$parent` / `$children`、`$attrs`/`$listeners`和 provide/inject
 
-#### 详细了解下解决方案：
+#### 结论：
+
+​    最常用的肯定是 `props`，以及 `$emit` 和 `$on` 方法，这次在业务中碰到的是 `ref` 直接调用子组件的方法，在抽离单一方法的子组件时可以使用。
+
+#### 详细了解下多种解决方案：
 
 |                           | 父组件-->                                                    | 子组件                                                       |
 | ------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
@@ -34,11 +36,7 @@ typora-root-url: ..
 |                           | 父组件                                                       | <--子组件                                                    |
 |                           | `<child :user="data" @childClick="parentEvent"></child>`     | `this.$emit('childClick','canshu');`                         |
 | $emit/$on                 | 通过一个空的 Vue 实例作为中央事件总线（事件中心）`var Event=new Vue();Event.$emit(事件名,数据);Event.$on(事件名,data => {});` |                                                              |
-| vuex                      | ![img](https://image.fundebug.com/2019-05-18-03.png)         | `$store.dispatch('action 名称', data1)`来触发；由于 vuex 里，我们保存的状态，都是数组，而 localStorage 只支持字符串，所以需要用 JSON 转换； |
-| $attrs/$listeners         | $attrs：**包含了父作用域中不被 prop 所识别 (且获取) 的特性绑定** (class 和 style 除外)。当一个组件没有声明任何 prop 时，这里会包含所有父作用域的绑定 (class 和 style 除外)，并且可以通过 v-bind=”\$attrs” 传入内部组件。通常配合 interitAttrs 选项一起使用。                                   $listeners：包含了父作用域中的 (不含 .native 修饰器的) v-on 事件监听器。它可以通过 v-on=”\$listeners” 传入内部组件。    `<child-com1 :foo="foo"    :boo="boo" :coo="coo"  :doo="doo" title="Alice" ></child-com1>` | ` created() {     console.log(this.$attrs); // { "boo": "Html", "coo": "CSS", "doo": "Vue", "title": "Alice" }   }` |
-| provide/inject            | 一个祖先组件向其所有子孙后代注入一个依赖，不论组件层次有多深，并在其上下游关系成立的时间里始终生效。父组件通过 `provider` 【和create同级】来提供变量，然后在子孙组件中通过` inject` 【和props同级】来注入变量。注意：provide 和 inject 绑定并不是可响应的。 | 如果想要响应式即父组件变化子组件随之变化，那么可以使用 Vue.observable({       name: "Alice"   }); 包裹 |
+| vuex                      | <img src="https://image.fundebug.com/2019-05-18-03.png" alt="img" style="zoom:50%;" /> | `$store.dispatch('action 名称', data1)`来触发；由于 vuex 里，我们保存的状态，都是数组，而 localStorage 只支持字符串，所以需要用 JSON 转换； |
+| $attrs/$listeners         | `$attrs`：**包含了父作用域中不被 prop 所识别 (且获取) 的特性绑定** (class 和 style 除外)。当一个组件没有声明任何 prop 时，这里会包含所有父作用域的绑定 (class 和 style 除外)，并且可以通过 `v-bind="$attrs"` 传入内部组件。通常配合 interitAttrs 选项一起使用。<br/>`$listeners`：包含了父作用域中的 (不含 .native 修饰器的) v-on 事件监听器。它可以通过 `v-on="$listeners"` 传入内部组件。    `<child-com1 :foo="foo"    :boo="boo" :coo="coo"  :doo="doo" title="Alice" ></child-com1>` | ` created() {     console.log(this.$attrs); // { "boo": "Html", "coo": "CSS", "doo": "Vue", "title": "Alice" }   }` |
+| provide/inject            | 一个祖先组件向其所有子孙后代注入一个依赖，不论组件层次有多深，并在其上下游关系成立的时间里始终生效。父组件通过 `provider` 【和create同级】来提供变量，然后在子孙组件中通过` inject` 【和props同级】来注入变量。注意：provide 和 inject 绑定并不是可响应的。 | 如果想要响应式即父组件变化子组件随之变化，那么可以使用 `Vue.observable({name: "Alice"}); `包裹 |
 | $parent / $children与 ref | ref：如果在普通的 DOM 元素上使用，引用指向 DOM 元素；**如果用在子组件上，引用就指向组件实例**，**使用后可以直接调用组件的方法或访问数据**。 |                                                              |
-
-
-
-​    最常用的肯定是 props，以及 $emit 和 $on 方法，这次在业务中碰到的是 ref 直接调用子组件的方法，在抽离单一方法的子组件时可以使用。
