modify：JS原生相关博客整理
modify：JS原生相关博客整理

--- a/_posts/JS原生基础相关/2019-06-19-对象及Json对象.md
+++ b/_posts/JS原生基础相关/2019-06-19-对象及Json对象.md
@@ -55,18 +55,15 @@ console.log('gender' in obj);//输出结果false
 
 点语法 : 对象.名字=值； 对象.名字=函数;
 ```javascript
-	obj.name="佐助";
-	console.log(obj.name);
+obj.name="佐助";
 ```
 等价于
 ```javascript
-	obj["name"]="佐助";
-	console.log(obj["name"]);
+obj["name"]="佐助";
 ```
 也可以写成
 ```javascript
-	obj[name]="佐助";
-	console.log(obj[name]);
+obj[name]="佐助";
 ```
 
 ### 函数参数：伪数组`arguments`
@@ -89,23 +86,24 @@ console.log('gender' in obj);//输出结果false
 ```javascript
 var 变量名= new Object();  // Object 是系统的构造函数  
 //实例化对象
-	var obj = new Object();
+var obj = new Object();
 //对象有特征---属性、行为---方法
-    //添加属性-----如何添加属性? 对象.名字=值;
-	obj.name = "小苏";
-	obj.age = 38;
-	obj.sex = "女";
 
-    //添加方法----如何添加方法? 对象.名字=函数;
-	obj.eat = function () {
-	    console.log("接天莲叶无穷碧");
-	};
-	obj.play = function () {
-        //在当前这个对象的方法中是可以访问当前这个对象的属性的值
-	    console.log(this.sex);
-	};
+//添加属性-----如何添加属性? 对象.名字=值;
+obj.name = "小苏";
+obj.age = 38;
+obj.sex = "女";
+
+//添加方法----如何添加方法? 对象.名字=函数;
+obj.eat = function () {
+    console.log("接天莲叶无穷碧");
+};
+obj.play = function () {
+    //在当前这个对象的方法中是可以访问当前这个对象的属性的值
+    console.log(this.sex);
+};
 ```
-#### --工厂模式创建对象--
+#### — 工厂模式创建对象 — 
 优点：解决了**如何一次性创建多个对象**--把创建对象的代码封装在一个函数中
 
 缺点：对象无法识别，因为所有的实例都指向一个原型
@@ -128,29 +126,29 @@ var person = createObject('Alice',32);
 
 
 
-#### 2.--自定义构造函数创建对象--：
+#### 2. — 自定义构造函数创建对象 — ：
 
 优点：实例可以识别为一个特定的类型
 
 缺点：每次创建实例时，每个方法都要被创建一次
 
 ```javascript
-	function Person(name,age) {
-		this.name=name;
-		this.age=age;
-		this.sayHi=function () {
-			console.log(this.name + this.age);
-		};
-	}
+function Person(name,age) {
+    this.name=name;
+    this.age=age;
+    this.sayHi=function () {
+        console.log(this.name + this.age);
+    };
+}
 
-    //自定义构造函数创建对象:
-	var obj=new Person("小明",10);
-	var obj2=new Person("小红",20);
+//自定义构造函数创建对象:
+var obj=new Person("小明",10);
+var obj2=new Person("小红",20);
 
-    //创建对象----实例化一个对象，并初始化
-    //如何获取该变量(对象)是不是属于什么类型的? 语法:变量 `instanceof` 类型的名字
-    console.log(obj instanceof Person);//true
-    console.log(obj2 instanceof Person);//true
+//创建对象----实例化一个对象，并初始化
+//如何获取该变量(对象)是不是属于什么类型的? 语法:变量 `instanceof` 类型的名字
+console.log(obj instanceof Person);//true
+console.log(obj2 instanceof Person);//true
 ```
 
 **工厂模式、自定义构造函数的共同点**：都是函数,都可以创建对象,都可以传入参数；
@@ -221,7 +219,7 @@ console.log(obj.name);
 + `var json=[{“name”: "小明",“age”: "10",“sex“: "男"},{“name”: "小明",“age”: "10",“sex“: "男"}]` 访问小明就用：`Json[0].name`
 + `Json`的数据实际上就是格式化后的一组字符串的数据。
 ```javascript
-    var Json = {
+var Json = {
 	name: "小明",
 	age: "10",
 	sex: "男"
@@ -237,33 +235,17 @@ console.log(Json["name"]);
 console.log(Json.name);
 ```
 
-##### 遍历对象,是不能通过for循环遍历，因为它是无序；可以用for-in循环；
+#### 注意 ⚠️ ：遍历对象,是不能通过for循环遍历，因为它是无序；可以用for-in循环；
 
 
 遍历对象
 ```javascript
- for(var key in 对象){ key是一个变量,这个变量中存储的是遍历的对象的属性的名字 }
-```
-```javascript
+// key是一个变量,这个变量中存储的是遍历的对象的属性的名字
 for (var key in Json) {
 	console.log(key + "：" + Json[key]);
 }
 ```
-##### 这里的`Json[key]`不能用`Json.key`来替代，点语法会创建一个`Json`里面的`key`属性，如果这里用`Json[“key”]`会是去`Json`中找`key`这个属性，会返回`undefined`；已经确定对象中确实有这个属性，再用 对象.属性名字 或者 对象[属性名字]；
+这里的`Json[key]`不能用`Json.key`来替代，点语法会创建一个`Json`里面的`key`属性，
+如果这里用`Json[“key”]`会是去`Json`中找`key`这个属性，会返回`undefined`；
+已经确定对象中确实有这个属性，再用 对象.属性名字 或者 对象[属性名字]；
 
-```
-var obj={
-	name:"Alice",
-	age:20,
-	sex:"男",
-	height:198,
-	weight:55
-};
-var objs={
-	"name":"Zen"
-};
-//遍历对象
-for(var key in obj){
-	console.log(key+"==>"+obj[key]);
-}
-```
