--- a/_posts/JS原生基础相关/2019-06-23-DOM相关知识点整理.md
+++ b/_posts/JS原生基础相关/2019-06-23-DOM相关知识点整理.md
@@ -13,7 +13,7 @@ typora-root-url: ..
 
 ### 本文概要如下：
 
-- **DOM树**：把html页面或者是xml文件看成是一个文档，文档就是一个对象，这个文档中所有的标签都是元素，元素也可以看成是对象,标签(元素，对象)有很多，还有嵌套的关系,组成的这种层次结构，可以模拟成树形结构图，简称：树状图，就是DOM树。
+- **DOM树**：把html页面或者是xml文件看成是一个文档，文档就是一个对象，这个文档中所有的标签都是元素，元素也可以看成是对象/标签(元素，对象)有很多，还有嵌套的关系，组成的这种层次结构，可以模拟成树形结构图，简称：树状图，就是DOM树。
 
 - **DOM对象**：通过DOM方式获取的元素得到的对象
 
@@ -50,16 +50,16 @@ typora-root-url: ..
 - 获取boby、title、html标签
 
 ```javascript
-console.log(document.body);		//获取的是元素--标签
-console.log(document.title);	//标签中的值
-console.log(document.documentElement);//获取根元素html
+document.body;		//获取的是元素--标签
+document.title;	//标签中的值
+document.documentElement;//获取根元素html
 ```
 
 
 
 -  操作**基本标签**的属性
 	* `src,title,alt,href,id`属性
-* 操作**表单标签**的属性吧+21
+* 操作**表单标签**的属性吧
 	* `name,value,type,checked,selected,disabled,readonly`
 * 元素的**样式操作**
 	* `对象.style.属性=值;`
@@ -102,17 +102,16 @@ console.log(document.documentElement);//获取根元素html
 ```
 
 ```javascript
-//document.getElementById("id属性的值");返回的是一个元素对象
-    document.getElementById("btn").onclick=function () {
-        alert("哈哈,我又变帅了");
-	};
+document.getElementById("btn").onclick = function () {
+    alert("哈哈,我又变帅了");
+};
 ```
 
 等价于
 
 ```javascript
 var btnObj=document.getElementById("btn");
-btnObj.onclick=function(){
+btnObj.onclick = function(){
     alert("这是分成两行代码的方式");
 }
 ```
@@ -127,12 +126,12 @@ btnObj.onclick=function(){
 
 * **根元素:html标签**
 
-* - **元素(element)**：页面中的所有的标签都是元素，元素可以看成是对象
-- **文档 document**：一个网页可以称为文档；**页面中的顶级对象**；
-- **节点 Node**：网页中的**所有内容都是节点**（标签、属性、文本[文字、换行、空格、回车]、注释等）
-- **节点的属性**：标签的属性；作用：为了将来**获取很多节点**，得到节点中的标签（元素），识别节点中的标签元素
+     * **元素(element)**：页面中的所有的标签都是元素，元素可以看成是对象
+* **文档 document**：一个网页可以称为文档；**页面中的顶级对象**；
+* **节点 Node**：网页中的**所有内容都是节点**（标签、属性、文本[文字、换行、空格、回车]、注释等）
+* **节点的属性**：标签的属性；作用：为了将来**获取很多节点**，得到节点中的标签（元素），识别节点中的标签元素
 
-![](/img/assets_2019/dom1.png)
+<img src="/../img/assets_2019/dom1.png" style="zoom:65%;" />
 
 
 
@@ -718,3 +717,4 @@ document.getElementById("btn").onclick=function () {
 | 属性 |    `textContent `     | 设置或返回指定节点的文本内容            | 去掉标签后，保留文本样式，有回车 |
 | 方法 |  `document.write()`   | 向文档写入指定的内容                    |                                  |
 | 方法 | `document.writeln() ` | 向文档写入指定的内容并换行              |                                  |
+
