--- a/_posts/JS原生基础相关/2019-06-21-内置对象和基本包装类型.md
+++ b/_posts/JS原生基础相关/2019-06-21-内置对象和基本包装类型.md
@@ -56,8 +56,7 @@ function randomNum(min, max) {
 Math对象下的属性和方法都是静态；
 
 ```javascript
-var result= Math.max(10,20,30,40);
-console.log(result);//40
+var result= Math.max(10,20,30,40);//40
 ```
 
 例子：自己定义一个对象**,**实现系统的**max**的方法
@@ -82,10 +81,8 @@ var result=mt.getMax(10,20,30,40,100,3);//调用已经定义的方法
 console.log(result);//100
 ```
 
-
-
-```javascript
-//随机给一个盒子添加一个十六进制的颜色
+```html
+<!-- 随机给一个盒子添加一个十六进制的颜色 -->
 <style>
 	div {
         width: 300px;
@@ -149,22 +146,22 @@ window.onload = function () {
 *总结功能：*
 
 ```javascript
-var dt= new Date();			//一种特殊的写法,只适用于这个Date的对象
+var dt= new Date();			//一种特殊的写法,只适用于这个Date的对象 Thu Jun 27 2019 14:40:16 GMT+0800 (中国标准时间)
 dt.getFullYear();			//年
-dt.getMonth();				//月---从0开始
+dt.getMonth();				//月---从0开始的 真实的月份是需要加1的
 dt.getDate();				//日
 dt.getHours();				//小时
 dt.getMinutes();			//分钟
 dt.getSeconds();			//秒
 dt.getDay();				//星期---从0开始
-dt.toDateString();			//日期，英文
-dt.toLocaleDateString();	//日期，数字
-dt.toTimeString();			//时间，英文
-dt.toLocaleTimeString();	//时间，数字
-dt.valueOf();				//毫秒
-date.toString(); 			//可以查看对象保存的时间信息
-console.log(new Date(2019, 0));    	//Tue Jan 01 2019 00:00:00 GMT+0800 (中国标准时间)
-console.log(new Date(2019, 0,0));	//Mon Dec 31 2018 00:00:00 GMT+0800 (中国标准时间)
+dt.toDateString();			//英文的日期 Thu Jun 27 2019
+dt.toLocaleDateString();	//数字格式日期 2019/6/27
+dt.toTimeString();			//时间，英文 14:40:16 GMT+0800 (中国标准时间)，小时分钟秒
+dt.toLocaleTimeString();	//时间，数字 上午11:03:07，小时分钟秒
+dt.valueOf();				//毫秒 1561617616422
+date.toString(); 			//可以查看对象保存的时间信息 Thu Jun 27 2019 14:40:16 GMT+0800 (中国标准时间)
+console.log(new Date(2019, 0));//Tue Jan 01 2019 00:00:00 GMT+0800 (中国标准时间)
+console.log(new Date(2019, 0, 0));//Mon Dec 31 2018 00:00:00 GMT+0800 (中国标准时间)
 ```
 
 整理常用使用场景：
@@ -174,50 +171,17 @@ console.log(new Date(2019, 0,0));	//Mon Dec 31 2018 00:00:00 GMT+0800 (中国标
 var w = new Date(y, 0).getDay();//星期---从0开始
 // 获取月份m共有多少天
 var max = new Date(y, m, 0).getDate();//日
-//当前的时间---当前的服务器
-var dt=new Date();
-console.log(dt);
 
 //三种传入参数模式的对比
 //1.
-var dt=new Date("2017-08-12");
-console.log(dt);//Sat Aug 12 2017 08:00:00 GMT+0800 (中国标准时间)
+var dt=new Date("2017-08-12");//Sat Aug 12 2017 08:00:00 GMT+0800 (中国标准时间)
 //2.得到的时间并不是传入的时间
-var dt=new Date(2017,08,12);
-console.log(dt);//Tue Sep 12 2017 00:00:00 GMT+0800 (中国标准时间)
+var dt=new Date(2017,08,12);//Tue Sep 12 2017 00:00:00 GMT+0800 (中国标准时间)
 //3.
-var dt=new Date("2017/08/12");
-console.log(dt);//Sat Aug 12 2017 00:00:00 GMT+0800 (中国标准时间)
+var dt=new Date("2017/08/12");//Sat Aug 12 2017 00:00:00 GMT+0800 (中国标准时间)
 
 // 获取时间的对象，得到的是毫秒
 var dt=Date.now();
-console.log(dt);
-
-var dt = new Date();
-//获取年份
-console.log(dt.getFullYear());
-//获取月份
-console.log(dt.getMonth()+1);//是0开始的 真实的月份是需要加1的
-//获取日期
-console.log(dt.getDate());
-//获取小时
-console.log(dt.getHours());
-//获取分钟
-console.log(dt.getMinutes());
-//获取秒
-console.log(dt.getSeconds());
-//获取星期
-console.log(dt.getDay());//星期从0开始的
-	
-//将时间转成字符串
-var dt=new Date();
-console.log(dt);				//hu Jun 27 2019 14:40:16 GMT+0800 (中国标准时间)
-console.log(dt.toString());		//hu Jun 27 2019 14:40:16 GMT+0800 (中国标准时间)
-console.log(dt.toDateString());	//Thu Jun 27 2019，英文的日期
-console.log(dt.toLocaleDateString());//2019/6/27，数字格式日期
-console.log(dt.toTimeString());	//14:40:16 GMT+0800 (中国标准时间)，小时分钟秒英文的
-console.log(dt.toLocaleTimeString());//上午11:03:07，小时分钟秒
-console.log(dt.valueOf());		//1561617616422，毫秒值
 ```
 
 格式化后的指定格式的日期和时间----**封装一个函数**
@@ -251,7 +215,7 @@ console.log(getDate(new Date()));
 
 ##### String---->字符串类型----引用类型---->是一个对象
 
-![](/img/assets_2019/str.png)
+<img src="/../img/assets_2019/str.png" style="zoom:45%;" />
 
 如上图所示，之前遇到的基本类型字符串str，初始化变量后，str的值就保存在栈中；这里我们要讲的内置对象String，是一个对象，其内容是堆中开辟空间存储，变量只保存了指向堆中对象的地址。
 
@@ -261,118 +225,111 @@ console.log(getDate(new Date()));
 
 这里讲String对象的两个特点：
 
-##### 1. 字符串可以看成是数组,所以,可以通过for循环进行遍历
+1、字符串可以看成是数组,所以,可以通过for循环进行遍历
 
 ```javascript
-var str="hello";	//可以看成是一个字符数组
-for(var i=0;i<str.length;i++){
+var str = "hello";	//可以看成是一个字符数组
+for(var i = 0;i < str.length;i++){
 	console.log(str[i]);
 }
 ```
 
-##### 2.字符串特性：不可变性,字符串的值是不能改变
+2、字符串特性：不可变性，字符串的值是不能改变
 
 ```javascript
-var str="hello";
-str[1]="W";
-console.log(str);//得到的还是hello，这要用对象的思想来理解
+var str = "junzhe";
+str[1] = "W";
+console.log(str);// 得到的还是 junzhe，这要用对象的思想来理解
 ```
 
-![](/img/assets_2019/str2.png)
+<img src="/../img/assets_2019/image-20210629165247060.png" alt="image-20210629165247060" style="zoom:73%;" />
 
-字符串的值之所以看起来是改变的,那是因为指向改变了,并不是真的值改变了，图解如下。
+<img src="/../img/assets_2019/str2.png" style="zoom:55%;" />
 
-![](/img/assets_2019/str3.png)
+字符串的值之所以看起来是改变的，那是因为**指向改变**了，并不是真的值改变了，图解如下。
+
+<img src="/../img/assets_2019/str3.png" style="zoom:65%;" />
 
 String的常用属性整理：
 
 ```javascript
 //.length------>字符串的长度
-	var str="12345";
+	var str = "12345";
 	console.log(str.length);//5
 
 //.charAt(索引),返回值是指定索引位置的字符串;超出索引,结果是空字符串
-	var str="whatareyounoshalei";
-	var result=str.charAt(10);
-	console.log(result);//n
+	var str = "whatareyounoshalei";
+	var result = str.charAt(10);//n
 
 //.fromCharCode(数字值,可以是多个参数),返 回的是ASCII码对应的值
-	var str=String.fromCharCode(83,79,83);//方法
-	console.log(str);//SOS
+	var str = String.fromCharCode(83,79,83);//方法 SOS
 
 //.concat(字符串1,字符串2,...);返回的是拼接之后的新的字符串
-	var str="Alice";
+	var str = "Alice";
 	console.log(str.concat("is","a","good","guy"));//Aliceisagoodguy
 
 //.indexOf(要找的字符串,从某个位置开始的索引);返回的是这个字符串的索引值,没找到则返回-1
-	var str="杭州下雨，让人无语";
-	var index=str.indexOf("人",5);
-	console.log(index);//6
+	var str = "杭州下雨，让人无语";
+	var index = str.indexOf("人",5); //6
 
 //.lastIndexOf(要找的字符串);从后向前找,但是索引仍然是从左向右的方式,找不到则返回-1
-	var str="helo amen";
-	var index=str.lastIndexOf("e");
-	console.log(index);//7
+	var str = "helo amen";
+	var index = str.lastIndexOf("e");//7
 
 //.replace("原来的字符串","新的字符串");用来替换字符串的
-	var str="今天天气好晴朗，好像会有彩虹";
-	if(str.indexOf("好")!=-1){
-		str=str.replace("晴朗","差劲");//str中的地址变了
+	var str = "今天天气好晴朗，好像会有彩虹";
+	if(str.indexOf("好") !== -1){
+		str = str.replace("晴朗","差劲");//str中的地址变了
 	}else{
 		console.log("不存在");
 	}
 
 //.slice(开始的索引,结束的索引); 从索引5的位置开始提取,到索引为10的前一个结束,没有10，并返回这个提取后的字符串
 	var str = "如果有一天我邪恶了,请记住,我曾纯洁过";
-	str = str.slice(5, 10);
-	console.log(str);//我邪恶了,
+	str = str.slice(5, 10);//我邪恶了,
 
 //.split("要干掉的字符串",切割后留下的个数);切割字符串
-	var str="乔峰|慕容|凤姐|梅超风|易昕|草原";
-	var arr=str.split("|",3);//切割后要留下的个数
-	for(var i=0;i<arr.length;i++){
-		console.log(arr[i]);
+	var str = "乔峰|慕容|凤姐|梅超风|易昕|草原";
+	var arr = str.split("|",3);//切割后要留下的个数
+	for(var i = 0;i < arr.length;i++){
+		console.log(arr[i]); // 乔峰，慕容，凤姐
 	}
 
 //.substr(开始的位置,长度);返回的是截取后的新的字符串
-	var str="哈哈,真的是好帅哦";
-	str=str.substr(5,5);
-	console.log(str);//是好帅哦
+	var str = "哈哈,真的是好帅哦";
+	str = str.substr(5,5); //是好帅哦
 
 //.substring(开始的索引,结束的索引),返回截取后的字符串,不包含结束的索引的字符串
-	var str="哈哈,易烊千玺真的是好帅哦";
-	str=str.substring(5,9);
-	console.log(str);//千玺真的
+	var str = "哈哈,易烊千玺真的是好帅哦";
+	str = str.substring(5,9);//千玺真的
 
 //.trim();干掉字符串两端的空格
-	var str=" 哦,这 是一个神奇的一天 ";
-	str=str.trim();
+	var str = " 哦,这 是一个神奇的一天 ";
+	str = str.trim();
 	console.log("===="+str+"====");//====哦,这 是一个神奇的一天====
 
 //.toLocaleLowerCase();转小写
 //.toLowerCase();转小写
-	var str="HELLO";
-	str=str.toLocaleLowerCase();//方法
-	str=str.toLowerCase();//方法
-	console.log(str);//hello
+	var str = "HELLO";
+	str = str.toLocaleLowerCase();//方法 hello
+	str = str.toLowerCase();//方法 hello
 
 //.toLocaleUpperCase()转大写
 //.toUpperCase();转大写
-	var str="hello";
-	str=str.toLocaleUpperCase();//方法
-	str=str.toUpperCase();//方法
-	console.log(str);//HELLO
+	var str = "hello";
+	str = str.toLocaleUpperCase();//方法 HELLO
+	str = str.toUpperCase();//方法 HELLO
 ```
 
 案例1:	找到这个字符串中所有的 o 出现的位置
 
 ```javascript
-	var str2 = "hello wod odd ott fbo nhyo";
-	var index = 0;//开始的位置
-	var key = "o";//要找的字符串
-	while ((index = str2.indexOf(key, index)) != -1) {//如果是-1情况,说明找完了
-		console.log(index);
-		index += key.length;
+var str2 = "hello wod odd ott fbo nhyo";
+var index = 0;//开始的位置
+var key = "o";//要找的字符串
+while ((index = str2.indexOf(key, index)) !== -1) { //如果是-1情况,说明找完了
+    console.log(index);
+    index += key.length;
 } //4 7 10 14 20 25
 ```
 
@@ -380,7 +337,7 @@ String的常用属性整理：
 
 - 解题思路：
 
-- ![](/img/assets_2019/str4.png)
+- <img src="/../img/assets_2019/str4.png" style="zoom:55%;" />
 
 ```javascript
 var str3 = "whatOareYyouYnoYshaHleiHoHmyHgod";
@@ -414,11 +371,11 @@ for(var key in obj){
 
 ##### 5.Number对象用于处理整数、浮点数等数值。
 
-| 成员              | 作用                                                         |
-| ----------------- | ------------------------------------------------------------ |
-| MAX_VALUE         | 在javascript中所能表示的**最大数值**（静态成员）             |
-| MIN_VALUE         | 在javascript中所能表示的**最小正值**（静态成员）             |
-| toFixed（digits） | 使用定点表示法来格式化一个数值；无数字，代表四舍五入取整数；有数字，根据数字多少来四舍五入取这个数量的小数  ； |
+| 成员                  | 作用                                                         |
+| --------------------- | ------------------------------------------------------------ |
+| MAX_VALUE             | 在javascript中所能表示的**最大数值**（静态成员）             |
+| MIN_VALUE             | 在javascript中所能表示的**最小正值**（静态成员）             |
+| **toFixed**（digits） | 使用定点表示法来格式化一个数值；<br/>无数字，代表四舍五入取整数；<br/>有数字，根据数字多少来四舍五入取这个数量的小数  ； |
 
 
 
@@ -426,14 +383,14 @@ for(var key in obj){
 
 ### 基本包装类型：
 
-##### 本身是基本类型,但是在执行代码的过程中,如果这种类型的变量调用了属性或者是方法；
+本身是基本类型，但是在执行代码的过程中，如果这种类型的变量**调用了属性或者是方法**；
 
-这种类型就不再是基本类型了,而是**基本包装类型**,这个变量也不是普通的变量了,而是**基本包装类型对象**；
+这种类型就不再是基本类型了，而是**基本包装类型**，这个变量也不是普通的变量了，而是**基本包装类型对象**；
 
 ```javascript
-var num=10;					//基本类型Number
-var num2=Number("10");		//基本类型Number，转换,没有new
-var num3=new Number("10");	//基本包装类型
+var num = 10;					//基本类型Number
+var num2 = Number("10");		//基本类型Number，转换,没有new
+var num3 = new Number("10");	//基本包装类型
 ```
 
 
@@ -443,11 +400,9 @@ var num3=new Number("10");	//基本包装类型
 - 如果是一个`true&&对象`,那么结果是对象
 
 ```javascript
-var flag=new Boolean(false);
-var result=true&&flag;
-console.log(result);//显示的是对象Boolean{false}
+var flag = new Boolean(false);
+var result = true&&flag; //显示的是对象Boolean{false}
 
-var result=flag&&true;
-console.log(result);//true
+var result = flag&&true; //true
 ```
 
