modify：复习 Vue 父子组件通信的几种方式
modify：复习 Vue 父子组件通信的几种方式

--- a/_posts/vue相关内容/2020-10-30-Vue 父子组件通信的几种方式.md
+++ b/_posts/vue相关内容/2020-10-30-Vue 父子组件通信的几种方式.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     工作 父子组件通信
+title:     Vue 父子组件通信的几种方式
 subtitle:  
 date:       2020-10-30
 author:     
@@ -12,13 +12,13 @@ typora-root-url: ..
 ---
 
 
-# 工作 父子组件通信
+# Vue 父子组件通信的几种方式
 
 场景：子组件中的方法在子组件中并没有调用，而是在父组件中使用 ref 调用子组件的方法；这是一种不怎么常见的父子组件通信，所以趁此机会，整理一下所有的父子组件通信，涨下见识
 
 参考：
 
-<img src="/img/assets_2019/image-20201030112829140.png" alt="image-20201030112829140" style="zoom:67%;" />
+<img src="/../img/assets_2019/image-20201030112829140.png" alt="image-20201030112829140" style="zoom:67%;" />
 
 #### 问题出现原因：
 
