add：69. x 的平方根 - 方法二

--- a/_posts/2021-06-29-跨页面通信.md
+++ b/_posts/2021-06-29-跨页面通信.md
@@ -19,9 +19,9 @@ typora-root-url: ..
 
 两个页面之间的通信会涉及到<span style="color: red">同源策略</span>的限制，所以按照是否满足同源策略的限制分成两大部分来看。
 
-### 同源页面间的通信
+## 同源页面间的通信
 
-#### 1/6、广播式通信 BroadCast Channel
+### 1/6、广播式通信 BroadCast Channel
 
 主要参考文章：
 
@@ -34,21 +34,25 @@ typora-root-url: ..
 <span style="color: red">注意：两个页面都需要对同一个频道实例化</span>
 
 ```js
-/* 实例化 */
-const ling = new BroadcastChannel('junZhe');
+// 页面1
+const ling = new BroadcastChannel('junZhe');//实例化
 /* 发送消息 */
 ling.postMessage('是真的！');
 ```
 
 ```js
-/* 实例化 */
-const ling = new BroadcastChannel('junZhe');
+// 页面2
+const ling = new BroadcastChannel('junZhe');//实例化
 /* 监听被广播的消息 - 也可以使用 addEventListener 来监听 message */
 ling.onmessage = function (e) {
     const data = e.data;// 是真的！
 };
 ```
 
+### 2/6、Service Worker
 
 
-### 非同源页面间的通信
+
+
+
+## 非同源页面间的通信
