--- a/_posts/算法、刷题/2021-06-29-69. x 的平方根.md
+++ b/_posts/算法、刷题/2021-06-29-69. x 的平方根.md
@@ -43,4 +43,33 @@ var mySqrt = function(x) {
 };
 ```
 
-- 
+- 方法二：二分法
+
+<img src="/../img/assets_2019/image-20210629235752292.png" alt="image-20210629235752292" style="zoom:35%;" />
+
+时间复杂度：O(logx) - 每一次搜索的区间大小为原来的 1/2，空间复杂度：O(1)
+
+```js
+let mySqrt = (x) => {
+    if (x === 0) {
+        return 0;
+    }
+    let left = 0, right = x;
+    let mid = Math.ceil(x / 2);
+    while(left < right) {
+        // 不用乘法，防止溢出
+        if (x / mid === mid) {
+            return mid;
+        }
+        if (x / mid < mid) {
+            // 注意 ⚠️ ：通过判断条件已知 mid^2 大于 x
+            right = mid - 1;
+        } else {
+            left = mid;
+        }
+        mid = Math.ceil((left + right) / 2);
+    }
+    return left
+}
+```
+
