add：69. x 的平方根 - 方法二：二分法逻辑说明

--- a/_posts/算法、刷题/2021-06-29-69. x 的平方根.md
+++ b/_posts/算法、刷题/2021-06-29-69. x 的平方根.md
@@ -49,6 +49,8 @@ var mySqrt = function(x) {
 
 时间复杂度：O(logx) - 每一次搜索的区间大小为原来的 1/2，空间复杂度：O(1)
 
+逻辑：将要查找的值划分在区间 `[left, right)` 中，通过两者的中间值 `mid` 与 `x` 的比较来判断求解的结果在哪个区间，直到最后找到对应结果
+
 ```js
 let mySqrt = (x) => {
     if (x === 0) {
