add：页面通信 - localstorage的storage事件

--- a/_posts/2021-06-29-跨页面通信.md
+++ b/_posts/2021-06-29-跨页面通信.md
@@ -51,6 +51,43 @@ ling.onmessage = function (e) {
 
 ### 2/6、Service Worker
 
+主要参考文章：
+
+- [Service Worker](https://juejin.cn/post/6844903588691443725)、尤雨溪大大点赞的文章：[PWA实战](https://zhuanlan.zhihu.com/p/25800461)
+
+核心要点：
+
+- Service Worker只能运行在 `HTTPS` 、`localhost（127.0.0.1）` 域下
+- Service Worker的各类操作都被设计为**异步 Promise**，用以避免一些长时间的阻塞操作
+
+【没有进行实践】
+
+### 3/6、LocalStorage
+
+核心要点：
+
+- 当 `LocalStorage` 属性的值变化时，会触发 `storage` 事件
+
+```js
+// 监听 localstroage 的变化
+window.addEventListener('storage', function (e) {
+    if (e.key === 'junzhe') {
+        const data = JSON.parse(e.newValue); 
+        // {message: '是真的', ts: 1625054508019}
+    }
+});
+```
+
+```js
+// 改变 LocalStorage -> 加 ts 是因为 storage 事件只在 值 真正改变时触发
+let ts = +new Date();
+let data = {
+    message: '是真的',
+    ts,
+};
+localStorage.setItem('junzhe', JSON.stringify(data));
+```
+
 
 
 
