--- a/_posts/2021-06-29-跨页面通信.md
+++ b/_posts/2021-06-29-跨页面通信.md
@@ -21,6 +21,8 @@ typora-root-url: ..
 
 ## 同源页面间的通信
 
+1-3 三种类型都是有一个“中央站”的概念，由中央站再通知给各个页面
+
 ### 1/6、广播式通信 BroadCast Channel
 
 主要参考文章：
@@ -49,7 +51,7 @@ ling.onmessage = function (e) {
 };
 ```
 
-### 2/6、Service Worker
+### 2/6、消息中转站 Service Worker
 
 主要参考文章：
 
@@ -88,8 +90,36 @@ let data = {
 localStorage.setItem('junzhe', JSON.stringify(data));
 ```
 
+### 4/6、Shared Worker
 
+核心要点：
+
+- 多个 Tab 注册的 Shared Worker 可以实现数据共享
+- 无法主动通知所有页面，使用<span style="color:red">轮询</span>的方式拉取最新的数据
+
+【没有进行实践】
+
+#### 5/6、IndexedDB
+
+核心要点：
+
+- 消息发送方将消息存至 `IndexedDB` 中，接收方通过<span style="color:red">轮询</span>去获取最新的信息
+
+#### 6/6、通过 window.open 实现
+
+核心要点：
+
+- 通过 A 页面打开 B 页面，可以形成页面树状结构
+
+缺点：如果 B 页面不是从 A 页面打开的，就失去了结构
 
 
 
 ## 非同源页面间的通信
+
+#### 通过 iframe 转换成同源页面通信
+
+核心要点：
+
+- 由于 `iframe` 与父页面间可以通过指定 `origin` 来忽略同源限制，因此可以在每个页面中嵌入同一个 `iframe` —> 这些 iframe 由于使用的是一个 url，因此属于同源页面，其通信方式可以复用上面第一部分提到的各种方式
+
