--- a/_posts/浏览器原理相关内容/2021-04-14-22 浏览器分层合成机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-14-22 浏览器分层合成机制.md
@@ -45,19 +45,29 @@ typora-root-url: ..
 ### 如何生成一幅图像
 关于其中任意一帧的生成方式，有**重排、重绘和合成**三种方式，每种方式的渲染路径是不同的。
 
-重排：根据CSSOM+DOM计算布局 --> 整个渲染流水线的每个阶段都要执行一遍；
-重绘：没有计算布局 --> 依然需要计算绘制信息，然后继续执行后面的流程；
+重排：根据CSSOM+DOM计算布局 --> 整个渲染流水线的每个阶段都要执行一遍；<br>
+重绘：没有计算布局 --> 依然需要计算绘制信息，然后继续执行后面的流程；<br>
 合成：并不需要计算布局、绘制两个阶段；
 
 ### 分层和合成
 
-如果没有分层 --> 从布局树直接生成目标图片的话，每次很小的变化都会重排/重绘；
-分层 --> 将素材分解为多个图层的操作；
+如果没有分层 --> 从布局树直接生成目标图片的话，每次很小的变化都会重排/重绘；<br>
+分层 --> 将素材分解为多个图层的操作；<br>
 合成 --> 最后将这些图层合并到一起的操作；
 
--   分层、合成流程
+- 分层、合成流程
 
-在 Chrome 的渲染流水线中，生成**布局树**之后 --> 开始分层：渲染引擎会根据布局树的特点将其转换为**层树**（Layer Tree）（层树是渲染流水线后续流程的基础结构）--> 层树中的**每个节点都对应着一个图层**（下一步的绘制阶段就依赖于层树中的节点）--> 绘制阶段：将绘制指令组合成一个**绘制列表** --> 光栅阶段：按照绘制列表中的指令生成图片，每一个图层都对应一张图片 --> **合成线程**将这些图片合成为“一张”图片，并最终将生成的图片发送到**后缓冲区**
+    在 Chrome 的渲染流水线中，生成**布局树**之后 
+
+    --> 开始分层：渲染引擎会根据布局树的特点将其转换为**层树**（Layer Tree）（层树是渲染流水线后续流程的基础结构）
+
+    --> 层树中的**每个节点都对应着一个图层**（下一步的绘制阶段就依赖于层树中的节点）
+
+    --> 绘制阶段：将绘制指令组合成一个**绘制列表** 
+
+    --> 光栅阶段：按照绘制列表中的指令生成图片，每一个图层都对应一张图片 
+
+    --> **合成线程**将这些图片合成为“一张”图片，并最终将生成的图片发送到**后缓冲区**
 
 合成操作是在**合成线程**上完成的，这也就意味着在执行合成操作时，是不会影响到主线程执行的。这就是为什么经常主线程卡住了，但是 CSS 动画依然能执行的原因
 
