add :  事件流 + 事件模型 + js绑定事件的几种方法

--- a/_posts/HTTP相关/2021-04-28-18 缓存代理 - 浏览器和服务器缓存.md
+++ b/_posts/HTTP相关/2021-04-28-18 缓存代理 - 浏览器和服务器缓存.md
@@ -15,20 +15,24 @@ typora-root-url: ..
 # 18 缓存代理 - 浏览器和服务器缓存
 
 -   总结
-1、计算机领域里最常用的性能优化手段是时空转换，也就是时间换空间或者**空间换时间**，HTTP 缓存属于后者；
-2、**缓存代理**是增加了缓存功能的代理服务，**缓存源服务器的数据**，分发给下游的客户端；
-3、`Cache-Control`字段也可以控制缓存代理，常用的有`private` `s-maxage` `no-transform`等，同样必须配合`Last-modified` `ETag`等字段才能使用；
+1、计算机领域里最常用的性能优化手段是时空转换，也就是时间换空间或者**空间换时间**，HTTP 缓存属于后者；<br>
+2、**缓存代理**是增加了缓存功能的代理服务，**缓存源服务器的数据**，分发给下游的客户端；<br>
+3、`Cache-Control`字段也可以控制缓存代理，常用的有`private` `s-maxage` `no-transform`等，同样必须配合`Last-modified` `ETag`等字段才能使用；<br>
 4、缓存代理有时候也会带来负面影响，缓存不良数据，需要及时刷新或删除
 
 <img src="/../img/assets_2019/image-20210428094900331.png" alt="image-20210428094900331" style="zoom:35%;" />
 
 ## 代理做了什么？
-代理服务收到源服务器发来的响应数据后需要做两件事：
-1、把报文转发给客户端
+代理服务收到源服务器发来的响应数据后需要做两件事：<br>
+1、把报文转发给客户端<br>
 2、把报文存入自己的 Cache 里
 
 ## 服务端针对缓存代理新增的属性
-    缓存代理能够复用 `16 浏览器和服务器缓存` 中提到的缓存控制策略；
+```json
+缓存代理能够复用 `16 浏览器和服务器缓存` 中提到的缓存控制策略；
+```
+<br>
+
 但由于缓存代理只是一个数据的中转站，并不是真正的数据消费者和生产者，所以新增了一些属性来做约束。
 
 
@@ -51,19 +55,23 @@ typora-root-url: ..
 
 ## 客户端对代理新增的缓存控制
 
+
+
 | 属性 | 作用 |
 | --- | --- |
 | max-stale | 如果代理上的缓存过期了也可以接受，但不能过期太多，超过 x 秒也会不要 |
 | min-fresh | 缓存必须有效，而且必须在 x 秒后依然有效 |
 | only-if-cached | 只接受代理缓存的数据，不接受源服务器的响应 |
+
+
 <img src="/../img/assets_2019/image-20210428095215783.png" alt="image-20210428095215783" style="zoom:35%;" />
 
 ## 代理上的缓存清理
 常用方法：使用自定义请求方法`PURGE`，发给代理服务器，要求删除 URI 对应的缓存数据
 
--   为什么要清除缓存？
-1、过期的数据应该及时淘汰，避免占用空间
-2、源站的资源有更新，需要删除旧版本，主动换成最新版（即刷新）
+-   为什么要清除缓存？<br>
+1、过期的数据应该及时淘汰，避免占用空间<br>
+2、源站的资源有更新，需要删除旧版本，主动换成最新版（即刷新）<br>
 3、有时候会缓存了一些本不该存储的信息，例如网络谣言或者危险链接，必须尽快把它们删除。
 
 
